--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "ECommerce, Cloud, PMP, PMI-ACP, Robot Framework & Open Source Contributor, Ham Radio Operator & APRS Developer"
   location         : "Deensen, Germany"
+  employer         : "on request"
   uri              : # URL
   email            : "joerg.schultze.lutter@gmail.com" 
 
