--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,5 +8,8 @@ main:
   - title: "CV"
     url: /cv/
 
-  - title: "Portfolio and Publications"
+  - title: "Portfolio"
     url: /portfolio/
+
+  - title: "Publications"
+    url: /publications/
