--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,5 +8,5 @@ main:
   - title: "CV"
     url: /cv/
 
-  - title: "Portfolios and Publications"
+  - title: "Portfolio and Publications"
     url: /portfolio/
